--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                 </p>
                 <p>
                     <ul class="fh5co-social-icons">
+                        <li><a href="https://www.twitter.com/griffin_kao" target="_blank"><i class="fa fa-twitter"></i></a></li>
                         <li><a href="https://www.linkedin.com/in/griffin-kao-4b209412b/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
                         <li><a href="http://github.com/griffink3" target="_blank"><i class="fa fa-github"></i></a></li>
                         <li><a href="https://medium.com/@griffink3" target="_blank"><i class="fa fa-medium"></i></a></li>
