--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				   					<h1>Griffin Kao</h1>
 										<h2>APM @ Google</h2>
 										<p><a class="btn btn-primary btn-learn" href="#fh5co-about"></i>About Me</a> <a class="btn btn-primary btn-learn" href="work.html">My Work</a></p>
-										<a href="antiportfolio.html"><p>My Anti-Portfolio</p></a>
+										<p><a href="antiportfolio.html">My Anti-Portfolio</a></p>
 				   				</div>
 				   			</div>
 				   		</div>
