--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="container-wrap">
 			<div class="top-menu">
 				<div class="row">
-					<div class="col-xs-4">
+					<div class="col-xs-4 griffin-header">
 						<div id="fh5co-logo"><a href="index.html">Griffin Kao</a></div>
 					</div>
 					<div class="col-xs-8 text-right menu-1">
@@ -118,7 +118,7 @@
 					<h2>About</h2>
 					<div class="col-sm-4" style="text-align: center;">
 						<span class="helper"></span>
-						<img style="max-height: 200px; vertical-align: middle;" src="images/griffin.JPG" />
+						<img style="max-height: 200px; vertical-align: middle; margin-bottom: 20px;" src="images/griffin.JPG" />
 					</div>
 					<div class="col-sm-8">
 						<p>Hi! I'm Griffin Kao and I'm an Associate Product Manager at Google. With a background in computer science, 
