--- a/work.html
+++ b/work.html
@@ -73,7 +73,7 @@
 		<div class="container-wrap">
 			<div class="top-menu">
 				<div class="row">
-					<div class="col-xs-4">
+					<div class="col-xs-4 griffin-header">
 						<div id="fh5co-logo"><a href="index.html">Griffin Kao</a></div>
 					</div>
 					<div class="col-xs-8 text-right menu-1">
