--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 						<span class="helper"></span>
 						<img style="max-height: 200px; vertical-align: middle; margin-bottom: 20px;" src="images/griffin.JPG" />
 					</div>
-					<div class="col-sm-8">
+					<div class="col-sm-8 left-align">
 						<p>Hi! I'm Griffin Kao and I'm an Associate Product Manager at Google. With a background in computer science, 
 							mechanical engineering, and economics at Brown University, I've previously worked as a software engineer 
 							and product manager at companies both large and small, B2B and B2C. However, my most important role is as a 
