--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
 					The dates reflect the length of the project but not necessarily the length of my involvement. You can also see some of my smaller coding/design 
 					projects on my <a href="software/index.html" target="_blank">old website</a>.</p>
 			</div>
-			<div class="col-md-10 col-md-offset-1 fh5co-heading">
+			<div class="col-md-10 col-md-offset-1 fh5co-heading projects">
 				<p>• <a href="https://www.unicorner.news" target="_blank">Unicorner</a> (June 2020 - Present) - “Startup a day” newsletter with over 4k subscribers.
 				<p>• <a href="https://www.brownreview.com" target="_blank">Brown Tech Review</a> (July 2020 - Present) - Online tech publication that garnered 1k views in
 					the first 3 weeks.
