--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
 					projects on my <a href="software/index.html" target="_blank">old website</a>.</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1 fh5co-heading projects">
-				<p>• <a href="https://www.unicorner.news" target="_blank">Unicorner</a> (June 2020 - Present) - “Startup a day” newsletter with over 4k subscribers.
+				<p>• <a href="https://www.unicorner.news" target="_blank">Unicorner</a> (June 2020 - Present) - “Startup a day” newsletter with over 5k subscribers and highly engaged community.
 				<p>• <a href="https://www.brownreview.com" target="_blank">Brown Tech Review</a> (July 2020 - Present) - Online tech publication that garnered 1k views in
 					the first 3 weeks.
 				<p>• <a href="https://www.artistprof.com" target="_blank">Artistprof</a> (March 2020 - April 2020) - "Linkedin for the entertainment industry". Pitched to Y Combinator, Pear VC, and Techstars with 200 beta users.  
