--- a/work.html
+++ b/work.html
@@ -99,17 +99,18 @@
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px;">Full-Time</p>
-					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, Data Privacy (August 2020 - Present)</p>
+					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, Ads Privacy (August 2021 - Present)</p>
+					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, My Activity (August 2020 - August 2021)</p>
+					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Associate Product Manager Intern, Maps Data Quality (Summer 2019)</p>
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px">Part-Time</p>
 					<p>• <a href="https://www.brownangelgroup.org/" target="_blank">Brown Angel Group</a> - Founding Venture Associate (November 2019 - May 2020)</p>
-					<p>• <a href="https://cs.brown.edu/" target="_blank">Brown University</a> - Non-Profit Recruiting Director (September 2019 - May 2020)</p>
-					<p>• <a href="https://cs.brown.edu/about/partners/" target="_blank">Brown CS Department</a> - Teaching Assistant (December 2017 - May 2020)</p>
+					<p>• <a href="https://cs.brown.edu/about/partners/" target="_blank">Brown CS Department</a> - Head Teaching Assistant (Jan 2018 - May 2019)</p>
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px">Contract Developer Work</p>
-					<p>• <a href="https://www.usemacro.com/" target="_blank">Macro</a> - Software Developer (July 2020 - August 2020)</p>
+					<p>• <a href="https://www.usemacro.com/" target="_blank">Macro</a> - Software Developer (July 2020 - July 2021)</p>
 					<p>• <a href="https://www.vitaeindustries.com/" target="_blank">Vitae Industries</a> - Software Developer (October 2019 - April 2020)</p>
 					<p>• <a href="https://monetate.com/" target="_blank">Monetate</a> - Software Engineering Intern (May 2018 - August 2018)</p>
 				</div>
