--- a/mechanical.html
+++ b/mechanical.html
@@ -79,7 +79,7 @@
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work Experience</a></li>
+							<li><a href="work.html">Work</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="writing.html">Writing</a></li>
 							<li class="active"><a href="mechanical.html">Mechanical</a></li>
