--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="work.html">Work Experience</a></li>
+							<li><a href="work.html">Work</a></li>
 							<li class="active"><a href="projects.html">Projects</a></li>
 							<li><a href="writing.html">Writing</a></li>
 							<li><a href="mechanical.html">Mechanical</a></li>
@@ -94,11 +94,15 @@
 		<div id="fh5co-about" class="project-history" style="padding-top: 10px;">
 			<div class="col-md-10 col-md-offset-1 text-center fh5co-heading" style="margin-bottom: 20px;">
 				<h2>Projects</h2>
-				<p>These are my most notable projects and ventures that I've started  - some coding projects, others startups, and yet others programs/non-profits. 
+				<!-- <p>These are my most notable projects  - some coding projects, others startups, and yet others programs/non-profits. 
+					The dates reflect the length of the project but not necessarily the length of my involvement.</p> -->
+				<!-- <p>These are my most notable projects and ventures that I've started  - some coding projects, others startups, and yet others programs/non-profits. 
 					The dates reflect the length of the project but not necessarily the length of my involvement. You can also see some of my smaller coding/design 
-					projects on my <a href="software/index.html" target="_blank">old website</a>.</p>
+					projects on my <a href="software/index.html" target="_blank">old website</a>.</p> -->
 			</div>
 			<div class="col-md-10 col-md-offset-1 fh5co-heading projects">
+				<p>• <a href="https://www.joinflowshop.com" target="_blank">Flowshop</a> (May 2023 - Present) - UGC management software for brands.
+				<p>• <a href="https://www.tapra.io" target="_blank">Tapra</a> (July 2021 - July 2022) - All-in-one workflow management software for tax and accounting firms.
 				<p>• <a href="https://www.unicorner.news" target="_blank">Unicorner</a> (June 2020 - Present) - “Startup a day” newsletter with over 5k subscribers and highly engaged community.
 				<p>• <a href="https://www.brownreview.com" target="_blank">Brown Tech Review</a> (July 2020 - Present) - Online tech publication that garnered 1k views in
 					the first 3 weeks.
