--- a/work.html
+++ b/work.html
@@ -79,7 +79,7 @@
 					<div class="col-xs-8 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="active"><a href="work.html">Work Experience</a></li>
+							<li class="active"><a href="work.html">Work</a></li>
 							<li><a href="projects.html">Projects</a></li>
 							<li><a href="writing.html">Writing</a></li>
 							<li><a href="mechanical.html">Mechanical</a></li>
@@ -94,25 +94,27 @@
 		<div id="fh5co-about" class="work-history" style="padding-top: 10px">
 				<div class="col-md-10 col-md-offset-1 text-center fh5co-heading" style="margin-bottom: 20px;">
 					<h2>Work History</h2>
-					<p>In the past, I've worked as a product manager, software developer, and venture associate at companies large and small. 
-						Here's an abbreviated list and you can check out <a href="https://linkedin.com/in/griffinkao" target="_blank">my Linkedin</a> for more info.</p>
+					<!-- <p>Check out <a href="https://linkedin.com/in/griffinkao" target="_blank">my Linkedin</a> for more info.</p> -->
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px;">Full-Time</p>
-					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, Ads Privacy (August 2021 - Present)</p>
-					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, My Activity (August 2020 - August 2021)</p>
+					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, Ads Privacy (Aug 2021 - Present)</p>
+					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Product Manager, My Activity (Aug 2020 - Aug 2021)</p>
 					<p>• <a href="https://myactivity.google.com" target="_blank">Google</a> - Associate Product Manager Intern, Maps Data Quality (Summer 2019)</p>
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px">Part-Time</p>
-					<p>• <a href="https://www.brownangelgroup.org/" target="_blank">Brown Angel Group</a> - Founding Venture Associate (November 2019 - May 2020)</p>
+					<p>• <a href="https://www.grishinrobotics.com/" target="_blank">Grishin Robotics</a> - Venture Scout (Jan 2022 - Present)</p>
+					<p>• <a href="https://www.slise.xyz/" target="_blank">Slise</a> - Advisor (Sept 2022 - Present)</p>
+					<p>• <a href="https://unconvo.com/" target="_blank">Unconvo</a> - Advisor (Jan 2021 - Dec 2021)</p>
+					<p>• <a href="https://www.brownangelgroup.org/" target="_blank">Brown Angel Group</a> - Founding Venture Associate (Nov 2019 - May 2020)</p>
 					<p>• <a href="https://cs.brown.edu/about/partners/" target="_blank">Brown CS Department</a> - Head Teaching Assistant (Jan 2018 - May 2019)</p>
 				</div>
 				<div class="col-md-10 col-md-offset-1 fh5co-heading work-list">
 					<p style="margin-bottom: 10px">Contract Developer Work</p>
 					<p>• <a href="https://www.usemacro.com/" target="_blank">Macro</a> - Software Developer (July 2020 - July 2021)</p>
-					<p>• <a href="https://www.vitaeindustries.com/" target="_blank">Vitae Industries</a> - Software Developer (October 2019 - April 2020)</p>
-					<p>• <a href="https://monetate.com/" target="_blank">Monetate</a> - Software Engineering Intern (May 2018 - August 2018)</p>
+					<p>• <a href="https://www.vitaeindustries.com/" target="_blank">Vitae Industries</a> - Software Developer (Oct 2019 - April 2020)</p>
+					<p>• <a href="https://monetate.com/" target="_blank">Monetate</a> - Software Engineering Intern (May 2018 - Aug 2018)</p>
 				</div>
 		</div>
 	
