--- a/mechanical.html
+++ b/mechanical.html
@@ -81,7 +81,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="work.html">Work</a></li>
 							<li><a href="projects.html">Projects</a></li>
-							<li><a href="writing.html">Writing</a></li>
+							<li><a href="investments.html">Investments</a></li>
+							<!-- <li><a href="writing.html">Writing</a></li> -->
 							<li class="active"><a href="mechanical.html">Mechanical</a></li>
 						</ul>
 					</div>
