--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="work.html">Work</a></li>
 							<li class="active"><a href="projects.html">Projects</a></li>
-							<li><a href="writing.html">Writing</a></li>
+							<li><a href="investments.html">Investments</a></li>
+							<!-- <li><a href="writing.html">Writing</a></li> -->
 							<li><a href="mechanical.html">Mechanical</a></li>
 						</ul>
 					</div>
@@ -111,9 +112,6 @@
 					Brown Venture Prize ($50k) finalist and received $2.5k grant from Brown.
 				<p>• <a href="https://cs.brown.edu/about/partners/partners/" target="_blank">Brown Non-Profit Recruiting</a> (Sept 2018 - Present) - 
 					A recruiting program placing 160+ STEM students annually at partner tech-focused nonprofits or social good companies as interns or new graduate hires.
-				<p>• <a href="https://lmfrisbeefriends.wixsite.com/frisbeefriends" target="_blank">Frisbee Friends</a> (Sept 2014 - Aug 2016) - 
-					Non-Profit organization partnering with the Children's Hospital of Pennsyvlania (CHOP) and the Lutheran Settlement House to 
-					bring together youths from different backgrounds through ultimate frisbee
 			</div>
 		</div>
 
